demoApp/testApi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test-api
  name: test-api
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-api
    spec:
      containers:
      - image: cosmoincorp/demo:my-fastapi-app
        name: my-fastapi-app
        imagePullPolicy: IfNotPresent
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata: 
  name: svc-ms-test-api
  namespace: demo-app
spec:
    ports:
    - name: portapi
      port: 80
      protocol: TCP
      targetPort: 8000
    selector:
      app: test-api
    type: NodePort
